--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -5,3 +5,12 @@ basic_tag_one:
   long_name: This is a test tag
   description: A test tag for tagging tests and testing tags, tu comprende??
 
+basic_tag_two:
+  short_name: Test tag two
+  long_name: This is another test tag
+  description: I shouldn't need a lot of these for tests
+
+basic_tag_three:
+  short_name: Test tag three
+  long_name: This is another test tag
+  description: I shouldn't need a lot of these for tests
