Added Tag Category model to contain Tags in groups

--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -4,13 +4,16 @@ basic_tag_one:
   short_name: Test tag
   long_name: This is a test tag
   description: A test tag for tagging tests and testing tags, tu comprende??
+  tag_category: tag_category_one
 
 basic_tag_two:
   short_name: Test tag two
   long_name: This is another test tag
   description: I shouldn't need a lot of these for tests
+  tag_category: tag_category_one
 
 basic_tag_three:
   short_name: Test tag three
   long_name: This is another test tag
   description: I shouldn't need a lot of these for tests
+  tag_category: tag_category_one
