Upgrade to Rails 5.2.0 RC2 and add ActiveStorage to attach files to activities

--- a/.gitignore
+++ b/.gitignore
@@ -16,13 +16,9 @@
 !/log/.keep
 /tmp
 
-# Ignore the secrets, obviously - I sure hope this is sufficient!
 /config/secrets.yml
 
-# The Devise config has a generated key that would probably be wise to leave out of git
-# I hope this won't cause issues with anyone else trying to run it - maybe it can be moved
-# to secrets.yml?
-# nevermind, it was commented out by default!
 
-#/config/initializers/devise.rb
 
+# Ignore master key for decrypting credentials and more.
+/config/master.key
