--- a/test/fixtures/textbook_pages.yml
+++ b/test/fixtures/textbook_pages.yml
@@ -3,6 +3,6 @@
 textbook_page_one:
   page: 1
   description: The first page of the textbook. Let's get crackin'!
-  textbook: textbook_page_one
+  textbook: textbook_one
   tag: basic_tag_one
 
