Add Devise :confirmable to users

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,27 +7,32 @@ regular_user_one:
   location: Shreveport, LA
   bio: Just a regular user, doing regular stuff.
   role: :normal
+  confirmed_at: <%= DateTime.now %>
 
 regular_user_two:
   username: Regular Rebecca
   email: rebecca@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'badpassword') %>
+  confirmed_at: <%= DateTime.now %>
   
 moderator_user_one:
   username: Moderator Mark
   email: mark@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'badpassword') %>
   role: :moderator
+  confirmed_at: <%= DateTime.now %>
   
 admin_user_one:
   username: Admin Alex
   email: alex@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'badpassword') %>
   role: :admin
+  confirmed_at: <%= DateTime.now %>
   
 silenced_user_one:
   username: Silenced Sylvester
   email: call_me_sly@example.com
   encrypted_password: <%= Devise::Encryptor.digest(User, 'badpassword') %>
   role: :silenced
+  confirmed_at: <%= DateTime.now %>
   
