Add in a model for comments and all its machinery

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,8 +23,12 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: utf-8
+  username: jake
+  password:
+  host: localhost
+  database: altopedia-dev-test
 
 production:
   adapter: postgresql
