--- a/test/fixtures/tags.yml
+++ b/test/fixtures/tags.yml
@@ -30,6 +30,18 @@ jhs_tag:
   description: I also need to be here for jhs_path in test
   tag_category: grammar_category
 
+hs_tag:
+  short_name: HS
+  long_name: High School
+  description: I have to be here lest hs_path break in test
+  tag_category: grammar_category
+
+conversation_tag:
+  short_name: Conversation
+  long_name: Conversation
+  description: I am yet another tag for testing
+  tag_category: grammar_category
+
 warmups_tag:
   short_name: warm-up
   long_name: Warm-ups
